--- a/phdthesis.html
+++ b/phdthesis.html
@@ -143,7 +143,7 @@
   Doctoral defence
   </h3>
   <p>
-  The doctoral defence is planned for the 28th of November of 2019 at 12:00, although this time might change. The defence will take place at the room MA313/314 in the 3rd floor of the Institut für Mathematik of the Technische Universität Berlin (Str. des 17. Juni 136). The defence committee will be presided by John M. Sullivan and it will be formed by the evaluators Peter Bürgisser, Felipe Cucker and Pierre Lairez. After the defence, there will be a small celebration with food and drinks in the Matheon Lounge (MA315).
+  The doctoral defence is planned for the 28th of November of 2019 at 12:00. The defence will take place at the room MA313/314 in the 3rd floor of the Institut für Mathematik of the Technische Universität Berlin (Str. des 17. Juni 136). The defence committee will be presided by John M. Sullivan and it will be formed by the evaluators Peter Bürgisser, Felipe Cucker and Pierre Lairez. After the defence, there will be a small celebration with food and drinks in the Matheon Lounge (MA315).
   </p>
   <hr>
 </div>
