--- a/phdthesis_es.html
+++ b/phdthesis_es.html
@@ -147,7 +147,7 @@
   Defensa doctoral
   </h3>
   <p>
-  La defensa doctoral está planeada para el 28 de noviembre de 2019 a las 12:00, aunque la hora puede cambiar. La defensa tendrá lugar en el aula MA313/314 en la 3ª planta del Institut für Mathematik de la Technische Universität Berlin (Str. des 17. Juni 136). El comité de la defensa doctoral será presidido por John M. Sullivan y estará compuesto por los evaluadores Peter Bürgisser, Felipe Cucker and Pierre Lairez. Después de la defensa, habrá una pequeña celebración con comida y bebidas en el Matheon Lounge (MA315).
+  La defensa doctoral está planeada para el 28 de noviembre de 2019 a las 12:00. La defensa tendrá lugar en el aula MA313/314 en la 3ª planta del Institut für Mathematik de la Technische Universität Berlin (Str. des 17. Juni 136). El comité de la defensa doctoral será presidido por John M. Sullivan y estará compuesto por los evaluadores Peter Bürgisser, Felipe Cucker and Pierre Lairez. Después de la defensa, habrá una pequeña celebración con comida y bebidas en el Matheon Lounge (MA315).
   </p>
   <hr>
 </div>
