--- a/index.html
+++ b/index.html
@@ -165,6 +165,8 @@
       x[0].style="margin-bottom: 0.5em;";
     x = document.getElementsByClassName("row");
      x[1].style="font-size:1em;padding-top:5vw;";
+     x[2].style="font-size:1em;padding-top:5vw;";
+     x[3].style="font-size:1em;padding-top:5vw;";
     document.getElementById("finalsentence").innerHTML="";
     }
     //-->
