--- a/phdthesis.html
+++ b/phdthesis.html
@@ -86,7 +86,7 @@
   </h1>
   </center>
   <div class="row" align="center">
-    <div class="col" style="font-size:2vw;">
+    <div class="col" style="font-size:1em;">
        <a href="thesis/coverthesis_tonellicueto.jpg"><img id="portrait" src="thesis/coverpage.jpg" style="margin-bottom:0.5em;margin-top:1.5em;" alt="Cover page of Conditionand Homology in Semialgebraic Geometry by Josué Tonelli-Cueto" width="60%"/></a>
        <a class="btn btn-phd" href="thesis/thesis_tonellicueto.pdf" role="button" style="width:80%;">Thesis (PDF) [submitted version]</a>
     </div>
