--- a/phdthesis.html
+++ b/phdthesis.html
@@ -85,46 +85,51 @@
     Condition and Homology in Semialgebraic Geometry
   </h1>
   </center>
+  <hr>
+  <div class="row" align="center"><div class="col" align="center">
+  <a class="btn btn-phd" href="thesis/thesis_tonellicueto.pdf" role="button" style="width:100%;">Thesis (PDF) [submitted version]</a></div><div class="col" align="center">
+  <a class="btn btn-phd" href="thesis/coverthesis_tonellicueto.jpg" role="button" style="width:100%;">Thesis cover (JPG)</a>
+  </div></div>
+  <hr>
   <div class="row" align="center">
-    <div class="col" style="font-size:1em;">
-       <a href="thesis/coverthesis_tonellicueto.jpg"><img id="portrait" src="thesis/coverpage.jpg" style="margin-bottom:0.5em;margin-top:1.5em;" alt="Cover page of Conditionand Homology in Semialgebraic Geometry by Josué Tonelli-Cueto" width="60%"/></a>
-       <a class="btn btn-phd" href="thesis/thesis_tonellicueto.pdf" role="button" style="width:80%;">Thesis (PDF) [submitted version]</a>
+    <div class="col" align="center">
+       <a href="thesis/thesis_tonellicueto.pdf"><img id="cover" src="thesis/coverpage.jpg" style="margin-bottom:0.5em;margin-top:1em;" alt="Cover page of Conditionand Homology in Semialgebraic Geometry by Josué Tonelli-Cueto" width="73%"/></a>
     </div>
-    <div class="col">
-      <a href="https://www.instagram.com/p/B3fBRcdgdQw/"><img id="portrait" src="imgs/josue_tonelli_cueto_thesis.JPG" style="margin-bottom:1.5em;margin-top:1.5em;" alt="Josué Tonelli-Cueto holding a copy of his doctoral thesis" width="100%"/></a>
+    <div class="col" align="center">
+      <a href="https://www.instagram.com/p/B3fBRcdgdQw/"><img id="portrait" src="imgs/josue_tonelli_cueto_thesis.JPG" style="margin-bottom:0.5em;margin-top:1em;" alt="Josué Tonelli-Cueto holding a copy of his doctoral thesis" width="100%"/></a>
     </div>
   </div>
   <hr>
-  <h4>
+  <h3>
   Abstract
-  </h4>
+  </h3>
   <p>
   The computation of the homology groups of semialgebraic sets (given by Boolean formulas) remains one of the open challenges of computational semialgebraic geometry. Despite the search for an algorithm taking singly exponential time only on the number of variables, as of today, the existing algorithms are symbolic and doubly exponential. In this PhD thesis, we show how to obtain a numerical algorithm running in single exponential time with very high probability, which improves the state-of-the-art. To do so, we explain the underlying ideas, methods and techniques from numerical algebraic geometry, numerical complexity and topological data analysis that made this progress possible. We finish with a list of open problems and questions pointing to a possible future of the numerical computation of topological invariants.
   </p>
   <p>
   Additionally, in the appendices, we cover the topic of the expected number of real zeros of a random fewnomial system and we give an accessible account of the central theme in Spanish.
   </p>
-  <h4>
+  <h3>
   Zusammenfassung (Abstract in German)
-  </h4>
+  </h3>
   <p>
   Die Berechnung der Homologiegruppen von semialgebraichen Mengen (gegeben durch boolesche Formeln) bleibt eine der offenen Herausforderungen der algorithmischen semialgebraischen Geometrie. Trotz der Suche nach einem Algorithmus mit einfach exponentieller Laufzeit in der Anzahl der Variablen, sind die nach heutigem Stand bekannten Algorithmen symbolisch und doppelt exponentiell. In dieser Doktorarbeit zeigen wir, wie man einen numerischen Algorithmus konstruiert, der mit großer Wahrscheinlichkeit einfach exponentiell ist und somit den Stand der Forschung verbessert. Dazu erklären wir die zugrundliegenden Ideen, Methoden und Techniken von numerischer algebraischen Geometrie, numerischer Komplexität und topologischer Datenanalyse, die dieser Fortschrift möglich machten. Wir enden mit einer Liste offener Probleme und Fragen, die auf eine mögliche Zukunft von Berechnung der topologischen Invarianten weisen.
   </p>
   <p>
   Außerdem, behandeln wir im Anhange die erwartete Anzahl reeller Nullstellen eines zufälligen Systems polynomialer Gleichungen mit wenigen Termen und geben einen informellen Überblick über das Hauptthema auf Spanisch.
   </p>
-  <h4>
+  <h3>
   Laburpena (Abstract in Basque)
-  </h4>
+  </h3>
   <p>
   Multzo semialjebraikoen (formula boolearrek emandakoen) homologia-taldeak kalkulatzeak jarraitzen du, oraindik ere, geometria semialjebraiko konputazionalaren erronka handienetako bat izaten. Bilatzen den algoritmoak aldagai kopuruan baino ez du hartzen denbora behin esponentziala; hala ere, gaur egun dauden algoritmo guztiak sinbolikoak eta bi aldiz esponentzialak dira. Doktorego-tesi honetan erakusten dugu nola lor daitekeen debora behin esponentzialean eta probabilitate handiarekin exekutatzen den zenbakizko algoritmo bat; hori teknikaren egoeraren hobekuntza da. Horretarako, zenbakizko geometria aljebraikoaren, zenbakizko konplexutasunaren eta datu-analisi topologikoaren azpian dauden eta aurrerapen hori posible egin duten ideia, metodo eta teknikak azaltzen ditugu. Problemen eta galdera irekien zerrenda batekin bukatzen dugu, zeinek inbariante topologikoen zenbakizko konputazioaren etorkizun posible bat adierazten baitute.
   </p>
   <p>
   Gainera, eranskinetan, ausazko sistema oligonomiko baten zero kopurua aztertzen dugu, eta tesi honen ikuspegi informala ematen dugu gaztelaniaz.
   </p>
-  <h4>
+  <h3>
   Resumen (Abstract in Spanish)
-  </h4>
+  </h3>
   <p>
   El cálculo de los grupos de homología de conjuntos semialgebraicos (dados por fórmulas booleanas) es todavía uno de los mayores desafíos de la geometría semialgebraica computacional. Aunque se busca un algoritmo que tome a lo sumo tiempo simplemente exponencial en el número de variables, hasta el día de hoy todos los algoritmos existentes son simbólicos y doblemente exponenciales. En esta tesis doctoral, mostramos cómo se puede obtener un algoritmo numérico que tome tiempo simplemente exponencial con alta probabilidad, lo cual es una mejora del estado del arte. Para ello, explicamos las ideas, métodos y técnicas subyacentes procedentes de la geometría algebraica numérica, de la complejidad numérica y del análisis topológico de datos que han hecho posible este progreso. Terminamos con una lista de problemas y preguntas abiertas que indican un posible futuro de la computación numérica de invariantes topológicos.
   </p>
@@ -132,16 +137,16 @@
   Además, en los apéndices, estudiamos el número esperado de ceros reales de un sistema oligonómico aleatorio y damos una visión informal del tema principal de esta tesis en castellano.
   </p>
   <hr>
-  <h3>
+  <h2>
   Doctoral thesis
-  </h3>
+  </h2>
   <p>
   The doctoral thesis was handed in on the 11th of October of 2019. It is currently under examination by the evaluators that are Peter Bürgisser, Felipe Cucker and Pierre Lairez.
   </p>
   <hr>
-  <h3>
+  <h2>
   Doctoral defence
-  </h3>
+  </h2>
   <p>
   The doctoral defence is planned for the 28th of November of 2019 at 12:00. The defence will take place at the room MA313/314 in the 3rd floor of the Institut für Mathematik of the Technische Universität Berlin (Str. des 17. Juni 136). The defence committee will be presided by John M. Sullivan and it will be formed by the evaluators Peter Bürgisser, Felipe Cucker and Pierre Lairez. After the defence, there will be a small celebration with food and drinks in the Matheon Lounge (MA315).
   </p>
@@ -168,7 +173,20 @@
     <script type="text/javascript">
     <!--
     if (screen.width <= 699) {
-    document.getElementById("portrait").style="width:100%;float:center;margin-bottom:1em;margin-top:1em;";
+      var x;
+      x = document.getElementsByTagName("H1");
+      var i;
+        for (i = 0; i < x.length; i++) {
+         x[i].style="font-size:2.5em;font-weight:bold;";
+        }
+      x = document.getElementsByTagName("H2");
+        for (i = 0; i < x.length; i++) {
+         x[i].style="font-size:1.8em;font-weight:bold;";
+      }
+      x = document.getElementsByTagName("H3");
+        for (i = 0; i < x.length; i++) {
+         x[i].style="font-size:1em;font-weight:bold;";
+      }
     document.getElementById("finalsentence").innerHTML="";
     }
     //-->
