--- a/pikasle_en.html
+++ b/pikasle_en.html
@@ -770,7 +770,7 @@ This picture was the back cover of the third printed number of $\pi kasle$. It r
 <br>
 <footer>
 <hr>
-  <p style="text-align:center;"><a rel="license" href="http://creativecommons.org/licenses/by-nc-sa/3.0/"><img alt="Licencia de Creative Commons" style="border-width:0" src="https://i.creativecommons.org/l/by-nc-sa/3.0/88x31.png" /></a> All the content of $\pi kasle$ is licensed under a <a style="color:white;" rel="license" href="http://creativecommons.org/licenses/by-nc-sa/3.0/">Creative Commons Attribution-NonCommercial-ShareAlike 3.0 Unported License</a>.<br>Translation by Ricardo Grande</p>
+  <p style="text-align:center;"><a rel="license" href="http://creativecommons.org/licenses/by-nc-sa/3.0/"><img alt="Licencia de Creative Commons" style="border-width:0" src="https://i.creativecommons.org/l/by-nc-sa/3.0/88x31.png" /></a> All the content of $\pi kasle$ is licensed under a <a style="color:white;" rel="license" href="http://creativecommons.org/licenses/by-nc-sa/3.0/">Creative Commons Attribution-NonCommercial-ShareAlike 3.0 Unported License</a>.<br>Text by Josué Tonelli-Cueto, translation by Ricardo Grande</p>
 <hr style="margin: 0;">
 </footer> <!--  /container  -->
 
