--- a/pikasle_es.html
+++ b/pikasle_es.html
@@ -774,7 +774,7 @@ Esta figura fue la contraportada del tercer número impreso de $\pi kasle$. Esta
 <br>
 <footer>
 <hr>
-    <p style="text-align:center;"><a rel="license" href="https://creativecommons.org/licenses/by-nc-sa/3.0/deed.es"><img alt="Licencia de Creative Commons" style="border-width:0" src="https://i.creativecommons.org/l/by-nc-sa/3.0/88x31.png" /></a> Todo el contenido de $\pi kasle$ está bajo una <a style="color:white;" rel="license" href="https://creativecommons.org/licenses/by-nc-sa/3.0/deed.es">licencia de Creative Commons Reconocimiento-NoComercial-CompartirIgual 3.0 Unported</a>.</p>
+    <p style="text-align:center;"><a rel="license" href="https://creativecommons.org/licenses/by-nc-sa/3.0/deed.es"><img alt="Licencia de Creative Commons" style="border-width:0" src="https://i.creativecommons.org/l/by-nc-sa/3.0/88x31.png" /></a> Todo el contenido de $\pi kasle$ está bajo una <a style="color:white;" rel="license" href="https://creativecommons.org/licenses/by-nc-sa/3.0/deed.es">licencia de Creative Commons Reconocimiento-NoComercial-CompartirIgual 3.0 Unported</a>.<br>Texto por Josué Tonelli Cueto</p>
 <hr style="margin: 0;">
 </footer> <!--  /container  -->
 
