CV update Alperen

--- a/cv.html
+++ b/cv.html
@@ -406,7 +406,7 @@
       <br><div class="cv">
       <div class="year"><h4>2018</h4></div><div class="paper"><h4>&emsp;On the Number of Real Zeros of Random Fewnomials
       <a class="btn btn-arxiv" href="https://arxiv.org/abs/1811.09425"  role="button">arXiv:1811.09425</a></h4></div>
-       <div class="pretalktitle"></div><div class="collaborator">(Together with <a href="https://www.math.tu-berlin.de/fachgebiete_ag_diskalg/fachgebiet_algorithmische_algebra/v_menue/members/prof_dr_peter_buergisser/">Peter B&uuml;rgisser</a> and <a href="https://www.math.tu-berlin.de/fachgebiete_ag_diskalg/fachgebiet_algorithmische_algebra/v_menue/members/dr_alperen_erguer/">Alperen A. Erg&uuml;r</a>)</div>
+       <div class="pretalktitle"></div><div class="collaborator">(Together with <a href="https://www.math.tu-berlin.de/fachgebiete_ag_diskalg/fachgebiet_algorithmische_algebra/v_menue/members/prof_dr_peter_buergisser/">Peter B&uuml;rgisser</a> and <a href="http://alpergur.xyz/">Alperen A. Erg&uuml;r</a>)</div>
       </div>
 
       <br><div class="row"><div class="col-md-12">
@@ -1854,7 +1854,7 @@ YYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYY -->
      <ul style="list-style-type:none;">
       <li><a href="https://www.math.tu-berlin.de/fachgebiete_ag_diskalg/fachgebiet_algorithmische_algebra/v_menue/members/prof_dr_peter_buergisser/" style="font-weight: bold;">Peter B&uuml;rgisser</a>, <em>pbuerg_AT_math.tu-berlin.de</em>, Technische Universit&auml;t Berlin.</li>
       <li><a href="https://www.cityu.edu.hk/ma/people/profile/cuckerf.htm" style="font-weight: bold;">Felipe Cucker</a>, <em>macucker_AT_cityu.edu.hk, CityU Hong Kong.</li>
-      <li><a href="https://www.math.tu-berlin.de/fachgebiete_ag_diskalg/fachgebiet_algorithmische_algebra/v_menue/members/dr_alperen_erguer/" style="font-weight: bold;">Alperen Ali Erg&uuml;r</a>, <em>erguer_AT_math.tu-berlin.de</em>, Technische Universit&auml;t Berlin.</li>
+      <li><a href="http://alpergur.xyz/" style="font-weight: bold;">Alperen Ali Erg&uuml;r</a>, <em>aergur_AT_cs.cmu.edu</em>, Carnegie Mellon University.</li>
       <li><a href="http://www.ehu.eus/~mtwmastm/" style="font-weight: bold;">Marta Macho-Stadler</a>, <em>marta.macho_AT_ehu.eus</em>, University of the Basque Country.</li>
      </ul>
 
