--- a/cv_es.html
+++ b/cv_es.html
@@ -446,8 +446,8 @@
    YYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYY -->
 
 <br><div class="cv">
-<div class="year"><h4>2019</h4></div><div class="title"><h4>&emsp;<a href="#openingeinstein">Opening Conference of the Thematic Einstein Semester on Algebraic Geometry</a><span style="float:right;"><!--<a href="pdf/felipefest2019_slides.pdf">Slides</a>--></span></h4></div>
-  <div class="pretalktitle"></div><div class="talktitle">What is the probabilistic analysis of a condition number?</div>
+<div class="year"><h4>2019</h4></div><div class="title"><h4>&emsp;<a href="#openingeinstein">Opening Conference of the Thematic Einstein Semester on Algebraic Geometry</a><span style="float:right;"><a href="https://vimeo.com/369919190">Enlace al vídeo</a></span></h4></div>
+  <div class="pretalktitle"></div><div class="talktitle"><a href="https://whatisseminar.xyz/talks/20191007.html">What is the probabilistic analysis of a condition number?</a></div>
 </div>
 
 <br><div class="cv">
@@ -476,7 +476,7 @@
       </div>
 
       <br><div class="cv">
-      <div class="year"><h4></h4></div><div class="title"><h4>&emsp;<a href="#7BMSStudConf">7th BMS Student Conference</a><!--<span style="float:right;"><a href="">Link to video of the talk</a></span>--></h4></div>
+      <div class="year"><h4></h4></div><div class="title"><h4>&emsp;<a href="#7BMSStudConf">7th BMS Student Conference</a><!--<span style="float:right;"><a href="">Enlace al vídeo</a></span>--></h4></div>
        <div class="pretalktitle"></div><div class="talktitle">How many zeros does a random fewnomial system have?</div>
       </div>
 
@@ -494,7 +494,7 @@
       </div>
 
       <br><div class="cv">
-      <div class="year"></div><div class="title"><h4>&emsp;<a href="#6BMSStudConf">6th BMS Student Conference</a><span style="float:right;"><a href="https://vimeo.com/album/5309843/video/272577693">Link to video of the talk</a></span></h4></div>
+      <div class="year"></div><div class="title"><h4>&emsp;<a href="#6BMSStudConf">6th BMS Student Conference</a><span style="float:right;"><a href="https://vimeo.com/272577693">Enlace al vídeo</a></span></h4></div>
        <div class="pretalktitle"></div><div class="talktitle">The Niyogi-Smale-Weinberger Approximation Theorem</div>
       </div>
 
@@ -512,7 +512,7 @@
       </div>
 
       <br><div class="cv">
-      <div class="year"></div><div class="title"><h4>&emsp;<a href="#5BMSStudConf">5th BMS Student Conference</a><span style="float:right;"><a href="https://vimeo.com/album/5309843/video/222339083">Link to video of the talk</a></span></h4></div>
+      <div class="year"></div><div class="title"><h4>&emsp;<a href="#5BMSStudConf">5th BMS Student Conference</a><span style="float:right;"><a href="https://vimeo.com/222339083">Enlace al vídeo</a></span></h4></div>
        <div class="pretalktitle"></div><div class="talktitle">The shadow of the hidden combinatorics of completely positive operators on Polynomial Identity Testing</div>
       </div>
 
@@ -605,35 +605,35 @@
       </div></div>
 
       <br><div class="cv">
-      <div class="year"><h4>2018</h4></div><div class="title"><h4>&emsp;<a href="#WhatIsSeminar">&ldquo;What is...?&rdquo; Seminar</a><span style="float:right;"><a href="https://vimeo.com/album/5309843/video/305120572">Link to video of the talk</a></span></h4></div>
+      <div class="year"><h4>2018</h4></div><div class="title"><h4>&emsp;<a href="#WhatIsSeminar">&ldquo;What is...?&rdquo; Seminar</a><span style="float:right;"><a href="https://vimeo.com/305120572">Enlace al vídeo</a></span></h4></div>
        <div class="pretalktitle"></div><div class="talktitle"><a href="https://whatisseminar.xyz/talks/20181207.html">What is the best voting system?</a></div>
        <div class="property">Lugar:</div><div class="value">Berlin, Germany</div>
        <div class="property">Fecha:</div><div class="value">7th of December of 2018</div>
       </div>
 
       <br><div class="cv">
-      <div class="year"></div><div class="title"><h4>&emsp;<a href="#WhatIsSeminar">&ldquo;What is...?&rdquo; Seminar</a><span style="float:right;"><a href="https://vimeo.com/album/5309843/video/281268225">Link to video of the talk</a></span></h4></div>
+      <div class="year"></div><div class="title"><h4>&emsp;<a href="#WhatIsSeminar">&ldquo;What is...?&rdquo; Seminar</a><span style="float:right;"><a href="https://vimeo.com/281268225">Enlace al vídeo</a></span></h4></div>
        <div class="pretalktitle"></div><div class="talktitle"><a href="https://whatisseminar.xyz/talks/20180629.html">What are semialgebraic sets in context?</a></div>
        <div class="property">Lugar:</div><div class="value">Berlin, Germany</div>
        <div class="property">Fecha:</div><div class="value">29th of June of 2018</div>
       </div>
 
       <br><div class="cv">
-      <div class="year"><h4>2017</h4></div><div class="title"><h4>&emsp;<a href="#WhatIsSeminar">&ldquo;What is...?&rdquo; Seminar</a><span style="float:right;"><a href="https://vimeo.com/album/5309843/video/277075223">Link to video of the talk</a></span></h4></div>
+      <div class="year"><h4>2017</h4></div><div class="title"><h4>&emsp;<a href="#WhatIsSeminar">&ldquo;What is...?&rdquo; Seminar</a><span style="float:right;"><a href="https://vimeo.com/277075223">Enlace al vídeo</a></span></h4></div>
        <div class="pretalktitle"></div><div class="talktitle"><a href="https://whatisseminar.xyz/talks/20170630.html">What are BPP, RP and the other probabilistic complexity classes?</a></div>
        <div class="property">Lugar:</div><div class="value">Berlin, Germany</div>
        <div class="property">Fecha:</div><div class="value">30th of June of 2017</div>
       </div>
 
       <br><div class="cv">
-      <div class="year"></div><div class="title"><h4>&emsp;<a href="#WhatIsSeminar">&ldquo;What is...?&rdquo; Seminar</a><span style="float:right;"><a href="https://vimeo.com/album/5309843/video/203591928">Link to video of the talk</a></span></h4></div>
+      <div class="year"></div><div class="title"><h4>&emsp;<a href="#WhatIsSeminar">&ldquo;What is...?&rdquo; Seminar</a><span style="float:right;"><a href="https://vimeo.com/203591928">Enlace al vídeo</a></span></h4></div>
        <div class="pretalktitle"></div><div class="talktitle"><a href="https://whatisseminar.xyz/talks/20170127.html">What is the length of a potato?</a></div>
        <div class="property">Lugar:</div><div class="value">Berlin, Germany</div>
        <div class="property">Fecha:</div><div class="value">27th of January of 2017</div>
       </div>
 
       <br><div class="cv">
-      <div class="year"><h4>2016</h4></div><div class="title"><h4>&emsp;<a href="#WhatIsSeminar">&ldquo;What is...?&rdquo; Seminar</a><span style="float:right;"><a href="https://vimeo.com/album/5309843/video/160594229">Link to video of the talk</a></span></h4></div>
+      <div class="year"><h4>2016</h4></div><div class="title"><h4>&emsp;<a href="#WhatIsSeminar">&ldquo;What is...?&rdquo; Seminar</a><span style="float:right;"><a href="https://vimeo.com/160594229">Enlace al vídeo</a></span></h4></div>
        <div class="pretalktitle"></div><div class="talktitle"><a href="https://whatisseminar.xyz/talks/20160205.html">What is an Origami Constructible Number?</a></div>
        <div class="property">Lugar:</div><div class="value">Berlin, Germany</div>
        <div class="property">Fecha:</div><div class="value">5th of February of 2016</div>
