--- a/multimedia.html
+++ b/multimedia.html
@@ -358,6 +358,10 @@
   <h3>Videos of talks at the Berlin Mathematical School</h3>
   <p>These are only some of the videos of my talks at the Berlin Mathematical School (BMS), a complete compendium of videos of my talks at the BMS can be found in the <a href="https://vimeo.com/album/5309843"><em>Vimeo album 5309843</em></a>.</p>
   <div class="row">
+    <div class="col-md-6" style="padding-top:1em;">
+       <div style="padding:56.25% 0 0 0;position:relative;"><iframe src="https://player.vimeo.com/video/369919190?color=ee2523&byline=0&portrait=0&title=0" style="position:absolute;top:0;left:0;width:100%;height:100%;" frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe></div>
+       <p style="text-align:center;"><b style="color:#ee2523;">What is the probabilistic analysis of a condition number?</b><br>Opening Conference of the Thematic Einstein Semester on Algebraic Geometry, October 2019</p>
+    </div>
    <div class="col-md-6" style="padding-top:1em;">
       <div style="padding:56.25% 0 0 0;position:relative;"><iframe src="https://player.vimeo.com/video/305120572?color=ee2523&byline=0&portrait=0&title=0" style="position:absolute;top:0;left:0;width:100%;height:100%;" frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe></div>
       <p style="text-align:center;"><b style="color:#ee2523;">What is the best voting system?</b><br>&ldquo;What is...?&rdquo; Seminar, December 2018</p>
