--- a/cv.html
+++ b/cv.html
@@ -443,7 +443,7 @@
 <!-- 2019
    YYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYY -->
 <br><div class="cv">
-<div class="year"><h4>2019</h4></div><div class="title"><h4>&emsp;<a href="#openingeinstein">Opening Conference of the Thematic Einstein Semester on Algebraic Geometry</a><span style="float:right;">a href="https://vimeo.com/369919190">Link to the video</a></span></h4></div>
+<div class="year"><h4>2019</h4></div><div class="title"><h4>&emsp;<a href="#openingeinstein">Opening Conference of the Thematic Einstein Semester on Algebraic Geometry</a><span style="float:right;"><a href="https://vimeo.com/369919190">Link to the video</a></span></h4></div>
  <div class="pretalktitle"></div><div class="talktitle"><a href="https://whatisseminar.xyz/talks/20191007.html">What is the probabilistic analysis of a condition number?</a></div>
 </div>
 
