--- a/cv_es.html
+++ b/cv_es.html
@@ -1751,8 +1751,8 @@ YYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYY -->
       <div class="year"></div><div class="title">
       <h4>&#160;&#160;La Calidad del Sistema Universitario Vasco: La Perspectiva de los Usuarios</h4></div>
         <div class="property">Organizador:</div><div class="value"><a href="https://www.unibasq.eus/">Agency for Quality of the Basque University System (UNIBASQ)</a></div>
-        <div class="property">Lugar:</div><div class="value"><a href="https://en.wikipedia.org/wiki/Bilbao">Bilbao</a>, Spain</div>
-        <div class="property">Fecha:</div><div class="value">16th of October of 2013</div>
+        <div class="property">Lugar:</div><div class="value"><a href="https://en.wikipedia.org/wiki/Bilbao">Bilbao</a>, España</div>
+        <div class="property">Fecha:</div><div class="value">16 de octubre de 2013</div>
       </div>
 
 <!-- 2012
@@ -1762,13 +1762,13 @@ YYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYY -->
       <div class="year">
       <h4>2012</h4>
       </div><div class="title">
-      <h4>&emsp;Poetry recital at the opening of the</h4></div>
+      <h4>&emsp;Recital poético en la inhauguración de la</h4></div>
       <div class="year"></div><div class="title">
-      <h4>&#160;&#160;<a href="pdf/traitdunion.pdf">Exhibition <em>Proyecto Trait D'Union</em></a></h4></div>
+      <h4>&#160;&#160;<a href="pdf/traitdunion.pdf">Exposición <em>Proyecto Trait D'Union</em></a></h4></div>
         <div class="property">Comisario:</div><div class="value">Matteo Acarrino, Carmela Claps and <a href="http://aunamendi.eusko-ikaskuntza.eus/en/cueto-puente-maria-jesus/ar-27108/">Mar&iacute;a Jes&uacute;s Cueto Puente</a></div>
         <div class="property">Institución anfitriona:</div><div class="value">Observatorio del Arte de Arnuero</div>
-        <div class="property">Lugar:</div><div class="value">Arnuero, Spain</div>
-        <div class="property">Fecha:</div><div class="value">31st of August of 2012</div>
+        <div class="property">Lugar:</div><div class="value">Arnuero, España</div>
+        <div class="property">Fecha:</div><div class="value">31 de agosto de 2012</div>
       </div>
 
    <!-- Olympiads
