--- a/multimedia_es.html
+++ b/multimedia_es.html
@@ -359,7 +359,7 @@
   <div class="row">
     <div class="col-md-6" style="padding-top:1em;">
        <div style="padding:56.25% 0 0 0;position:relative;"><iframe src="https://player.vimeo.com/video/369919190?color=ee2523&byline=0&portrait=0&title=0" style="position:absolute;top:0;left:0;width:100%;height:100%;" frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe></div>
-       <p style="text-align:center;"><b style="color:#ee2523;">What is the probabilistic analysis of a condition number?</b><br>Opening Conference of the Thematic Einstein Semester on Algebraic Geometry, October 2019</p>
+       <p style="text-align:center;"><b style="color:#ee2523;">What is the probabilistic analysis of a condition number?</b><br>Opening Conf. of the Thematic Einstein Semester, October 2019</p>
     </div>
    <div class="col-md-6" style="padding-top:1em;">
       <div style="padding:56.25% 0 0 0;position:relative;"><iframe src="https://player.vimeo.com/video/305120572?color=ee2523&byline=0&portrait=0&title=0" style="position:absolute;top:0;left:0;width:100%;height:100%;" frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe></div>
@@ -369,7 +369,6 @@
      <div style="padding:56.25% 0 0 0;position:relative;"><iframe src="https://player.vimeo.com/video/281268225?color=ee2523&byline=0&portrait=0&title=0" style="position:absolute;top:0;left:0;width:100%;height:100%;" frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe></div>
      <p style="text-align:center;"><b style="color:#ee2523;">What are semialgebraic sets in context?</b><br>&ldquo;What is...?&rdquo; Seminar, junio de 2018</p>
    </div>
-
    <div class="col-md-6" style="padding-top:1em;">
       <div style="padding:56.25% 0 0 0;position:relative;"><iframe src="https://player.vimeo.com/video/277075223?color=ee2523&byline=0&portrait=0&title=0" style="position:absolute;top:0;left:0;width:100%;height:100%;" frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe></div>
       <p style="text-align:center;"><b style="color:#ee2523;">What are RP, co-RP, ZPP and all those random complexity clases?</b><br>&ldquo;What is...?&rdquo; Seminar, junio de 2017</p>
@@ -378,7 +377,6 @@
      <div style="padding:56.25% 0 0 0;position:relative;"><iframe src="https://player.vimeo.com/video/272577693?color=ee2523&byline=0&portrait=0&title=0" style="position:absolute;top:0;left:0;width:100%;height:100%;" frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe></div>
      <p style="text-align:center;"><b style="color:#ee2523;">The Niyogi-Smale-Weinberger Approximation Theorem</b><br>6th BMS Student Conference, febrero de 2018</p>
    </div>
-
    <div class="col-md-6" style="padding-top:1em;">
       <div style="padding:56.25% 0 0 0;position:relative;"><iframe src="https://player.vimeo.com/video/222339083?color=ee2523&byline=0&portrait=0&title=0" style="position:absolute;top:0;left:0;width:100%;height:100%;" frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe></div>
       <p style="text-align:center;"><b style="color:#ee2523;">The shadow of the hidden combinatorics of completely positive operators on Polynomial Identity Testing</b><br>5th BMS Student Conference, febrero de 2017</p>
@@ -387,7 +385,6 @@
      <div style="padding:56.25% 0 0 0;position:relative;"><iframe src="https://player.vimeo.com/video/203591928?color=ee2523&byline=0&portrait=0&title=0" style="position:absolute;top:0;left:0;width:100%;height:100%;" frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe></div>
      <p style="text-align:center;"><b style="color:#ee2523;">What is the length of a potato?</b><br>&ldquo;What is...?&rdquo; Seminar, enero de 2017</p>
    </div>
-   <div class="col-md-3"></div>
    <div class="col-md-6" style="padding-top:1em;">
       <div style="padding:56.25% 0 0 0;position:relative;"><iframe src="https://player.vimeo.com/video/160594229?color=ee2523&byline=0&portrait=0&title=0" style="position:absolute;top:0;left:0;width:100%;height:100%;" frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe></div>
       <p style="text-align:center;"><b style="color:#ee2523;">What is an origami constructible number?</b><br>&ldquo;What is...?&rdquo; Seminar, febrero de 2016</p>
