--- a/multimedia.html
+++ b/multimedia.html
@@ -360,7 +360,7 @@
   <div class="row">
     <div class="col-md-6" style="padding-top:1em;">
        <div style="padding:56.25% 0 0 0;position:relative;"><iframe src="https://player.vimeo.com/video/369919190?color=ee2523&byline=0&portrait=0&title=0" style="position:absolute;top:0;left:0;width:100%;height:100%;" frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe></div>
-       <p style="text-align:center;"><b style="color:#ee2523;">What is the probabilistic analysis of a condition number?</b><br>Opening Conference of the Thematic Einstein Semester on Algebraic Geometry, October 2019</p>
+       <p style="text-align:center;"><b style="color:#ee2523;">What is the probabilistic analysis of a condition number?</b><br>Opening Conf. of the Thematic Einstein Semester, October 2019</p>
     </div>
    <div class="col-md-6" style="padding-top:1em;">
       <div style="padding:56.25% 0 0 0;position:relative;"><iframe src="https://player.vimeo.com/video/305120572?color=ee2523&byline=0&portrait=0&title=0" style="position:absolute;top:0;left:0;width:100%;height:100%;" frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe></div>
@@ -388,7 +388,6 @@
      <div style="padding:56.25% 0 0 0;position:relative;"><iframe src="https://player.vimeo.com/video/203591928?color=ee2523&byline=0&portrait=0&title=0" style="position:absolute;top:0;left:0;width:100%;height:100%;" frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe></div>
      <p style="text-align:center;"><b style="color:#ee2523;">What is the length of a potato?</b><br>&ldquo;What is...?&rdquo; Seminar, January 2017</p>
    </div>
-   <div class="col-md-3"></div>
    <div class="col-md-6" style="padding-top:1em;">
       <div style="padding:56.25% 0 0 0;position:relative;"><iframe src="https://player.vimeo.com/video/160594229?color=ee2523&byline=0&portrait=0&title=0" style="position:absolute;top:0;left:0;width:100%;height:100%;" frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe></div>
       <p style="text-align:center;"><b style="color:#ee2523;">What is an origami constructible number?</b><br>&ldquo;What is...?&rdquo; Seminar, February 2016</p>
