--- a/cv_es.html
+++ b/cv_es.html
@@ -124,27 +124,27 @@
       </div></div>
 
       <br><div class="cv">
-      <div class="year"><h4>2017-19</h4></div><div class="title"><h4>&emsp;PhD in Mathematics (currently)</h4></div>
-        <div class="property">PhD Tema:</div><div class="value">Numerical computation of the homology of semialgebraic sets</div>
-        <div class="property">PhD supervisors:</div><div class="value"> <a href="https://www.math.tu-berlin.de/fachgebiete_ag_diskalg/fachgebiet_algebra_zahlentheorie/v_menue/people/prof_dr_peter_buergisser/">Peter Bürgisser</a></div>
+      <div class="year"><h4>2017-19</h4></div><div class="title"><h4>&emsp;Doctorado en matemáticas (actualmente)</h4></div>
+        <div class="property">Tema de la tesis:</div><div class="value">Numerical computation of the homology of semialgebraic sets</div>
+        <div class="property">Directores de tesis:</div><div class="value"> <a href="https://www.math.tu-berlin.de/fachgebiete_ag_diskalg/fachgebiet_algebra_zahlentheorie/v_menue/people/prof_dr_peter_buergisser/">Peter Bürgisser</a></div>
         <div class="property"></div><div class="value"><a href="https://www6.cityu.edu.hk/ma/people/profile/cuckerf.htm">Felipe Cucker</a></div>
         <div class="property">Institución:</div><div class="value"><a href="https://www.math-berlin.de/">Berlin Mathematical School (BMS)</a></div>
         <div class="property"></div><div class="value"><a href="https://www.tu-berlin.de/menue/home/parameter/en/">Technische Universit&auml;t Berlin</a></div>
-        <div class="property">Duración:</div><div class="value">January 2017 - November 2019 (planned)</div>
+        <div class="property">Duración:</div><div class="value">enero del 2017 - noviembre del 2019 (planeado)</div>
       </div>
 
       <br><div class="cv">
-      <div class="year"><h4>2014-17</h4></div><div class="title"><h4>&emsp;M.Sc. Mathematik <em>(M.Sc. Mathematics)</em></h4></div>
+      <div class="year"><h4>2014-17</h4></div><div class="title"><h4>&emsp;M.Sc. Mathematik <em>(Máster en Matemáticas)</em></h4></div>
         <div class="property">M.'s thesis' title:</div><div class="value"><em>On the Complexity of some Null-Cone Membership Problems</em></div>
         <div class="property">M.'s thesis' supervisor:</div><div class="value"> <a href="https://www.math.tu-berlin.de/fachgebiete_ag_diskalg/fachgebiet_algebra_zahlentheorie/v_menue/people/prof_dr_peter_buergisser/">Peter Bürgisser</a></div>
         <div class="property">Average grade:</div><div class="value">1.0<a href="#grades">*</a> </div>
         <div class="property">Institución:</div><div class="value"><a href="https://www.math-berlin.de/">Berlin Mathematical School (BMS)</a></div>
         <div class="property"></div><div class="value"><a href="https://www.tu-berlin.de/menue/home/parameter/en/">Technische Universit&auml;t Berlin</a></div>
-        <div class="property">Duración:</div><div class="value">October 2014 - March 2017</div>
+        <div class="property">Duración:</div><div class="value">octubre del 2014 - marzo del 2017</div>
       </div>
 
       <br><div class="cv">
-      <div class="year"><h4>2009-14</h4></div><div class="title"><h4>&emsp;Licenciatura en Matem&aacute;ticas <em>(B. Mathematics)</em></h4></div>
+      <div class="year"><h4>2009-14</h4></div><div class="title"><h4>&emsp;Licenciatura en Matem&aacute;ticas</h4></div>
         <div class="property">Recognitions:</div><div class="value">Best Student Record</div>
         <div class="property"></div><div class="value"><a href="#extraordinaryaward">End of Degree Extraordinary Award</a></div>
         <div class="property"></div><div class="value"><a href="#nationalaward">First Prize in the End of Studies Spanish National Awards</a></div>
@@ -904,7 +904,7 @@ YYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYY -->
 ================================================== -->
 
    <br><div class="row"><div class="col-md-12">
-   <h3>Servicio</h3>
+   <h2>Servicio</h2>
    </div></div>
 
 <!-- 2018
