--- a/cv.html
+++ b/cv.html
@@ -122,13 +122,13 @@
       </div></div>
 
       <br><div class="cv">
-      <div class="year"><h4>2017-19</h4></div><div class="title"><h4>&emsp;PhD in Mathematics (currently)</h4></div>
-        <div class="property">PhD topic:</div><div class="value">Numerical computation of the homology of semialgebraic sets</div>
-        <div class="property">PhD supervisors:</div><div class="value"> <a href="https://www.math.tu-berlin.de/fachgebiete_ag_diskalg/fachgebiet_algebra_zahlentheorie/v_menue/people/prof_dr_peter_buergisser/">Peter Bürgisser</a></div>
+      <div class="year"><h4>2017-19</h4></div><div class="title"><h4>&emsp;Doctorate in Mathematics <span style="float:right;"><a href="doctoralthesis.html">Doctoral thesis</a></span></h4></div>
+        <div class="property">Doctoral thesis' title:</div><div class="value"><em>Condition and Homology in Semialgebraic Geometry</em></div>
+        <div class="property">Doctoral supervisors:</div><div class="value"> <a href="https://www.math.tu-berlin.de/fachgebiete_ag_diskalg/fachgebiet_algebra_zahlentheorie/v_menue/people/prof_dr_peter_buergisser/">Peter Bürgisser</a></div>
         <div class="property"></div><div class="value"><a href="https://www6.cityu.edu.hk/ma/people/profile/cuckerf.htm">Felipe Cucker</a></div>
         <div class="property">Institution:</div><div class="value"><a href="https://www.math-berlin.de/">Berlin Mathematical School (BMS)</a></div>
         <div class="property"></div><div class="value"><a href="https://www.tu-berlin.de/menue/home/parameter/en/">Technische Universit&auml;t Berlin</a></div>
-        <div class="property">Duration:</div><div class="value">January 2017 - November 2019 (planned)</div>
+        <div class="property">Duration:</div><div class="value">January 2017 - November 2019 (defense planned on the 28th)</div>
       </div>
 
       <br><div class="cv">
@@ -244,7 +244,7 @@
          <div class="year">
          <h4>2019</h4>
          </div><div class="title">
-         <h4>&emsp;SIAM Travel Award</h4></div>
+         <h4>&emsp;SIAM Student Travel Award</h4></div>
            <div class="property">Description:</div><div class="value">To attend the <a href="#SIAMAG2019">SIAM Conference on Applied Algebraic Geometry 2019</a></div>
            <div class="property">Awarding institution:</div><div class="value"><a href="https://siam.org/">SIAM</a></div>
            <div class="property">Date:</div><div class="value">July of 2019</div>
@@ -539,7 +539,7 @@
 
       <br><div class="cv">
       <div class="year"><h4>2018</h4></div><div class="title"><h4>&emsp;<a href="https://www.math.ovgu.de/Institute/IAG/Oberseminar.html">Oberseminar des Institut f&uuml;r Algebra und Geometrie der OvGU</a></h4></div>
-      <div class="year"></div><div class="title"><h4>&emsp;&ensp;<em>(Seminar of the Department of Algebray and Geometry of the OvGU)</em></h4></div>
+      <div class="year"></div><div class="title"><h4>&emsp;&ensp;<em>(Seminar of the Department of Algebra and Geometry of the OvGU)</em></h4></div>
        <div class="pretalktitle"></div><div class="talktitle"><a href="https://web.archive.org/web/20190423152748/https://www.mathcore.ovgu.de/NEWS/index.php">Computing the homology of semialgebraic sets</a></div>
         <div class="property">Institution:</div><div class="value"><a href="https://www.ovgu.de/">Otto von Guericke Universit&auml;t Magdeburg (OvGU)</a></div>
         <div class="property">Location:</div><div class="value">Magdeburg, Germany</div>
@@ -709,7 +709,7 @@ YYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYY -->
         <h4>2018</h4>
         </div><div class="title">
         <h4>&emsp;<a href="https://www.math.tu-berlin.de/fachgebiete_ag_diskalg/fachgebiet_algorithmische_algebra/v_menue/veranstaltungen/2018ss/effective_algebraic_geometry_seminar/"><i>Effective Algebraic Geometry</i> Seminar</a></h4></div>
-          <div class="property">Description:</div><div class="value">Seminar where topic in algorithmic algebra where covered</div>
+          <div class="property">Description:</div><div class="value">Seminar where topics in algorithmic algebra where covered</div>
           <div class="property">Role:</div><div class="value">Organizer together with Peter B&uuml;rgisser and Alperen Ali Erg&uuml;r</div>
           <div class="property">Institution:</div><div class="value"><a href="https://www.tu-berlin.de/menue/home/parameter/en/">Technische Universit&auml;t Berlin</a></div>
           <div class="property">Date:</div><div class="value">April of 2018 - July of 2018</div>
@@ -930,7 +930,7 @@ YYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYY -->
    <h4>2017</h4>
    </div><div class="title">
    <h4>&emsp;<a href="https://web.archive.org/web/20171102125650/https://www.math-berlin.de/about-bms/people-a-organization/student-representatives">BMS Student Representative</a></h4></div>
-     <div class="property">Description:</div><div class="value">Representation in the Executive Board and other committees of the BMS and organisation of social activities</div>
+     <div class="property">Description:</div><div class="value">Representation in the <em>Executive Board</em> and other committees of the BMS and organisation of social activities</div>
      <div class="property"></div><div class="value">Representative in the <em>Committee on Mentoring, Gender, and Diversity</em> (together with Qiao Luo)</div>
      <div class="property"></div><div class="value">Creation and execution of the first <em>Survey to BMS Students</em></div>
      <div class="property">Co-representatives:</div><div class="value">Brent Moran, H&eacute;ctor Andrade-Loarca, Qiao Luo and Yuya Tokuta</div>
@@ -946,7 +946,7 @@ YYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYY -->
    <div class="year">
    <h4>2012-13</h4>
    </div><div class="title">
-   <h4>&emsp;Secretary of</h4></div>
+   <h4>&emsp;Secretary of the</h4></div>
    <div class="year"></div><div class="title">
    <h4>&#160;&#160;Asociaci&oacute;n de Estudiantes de Matem&aacute;ticas <em>Epsilon-Delta</em> Matematika Ikasleen Elkartea</h4></div>
      <div class="property">Description:</div><div class="value">Association of mathematics students of the <a href="https://www.ehu.eus/en/">University of the Basque Country (UPV/EHU)</a></div>
@@ -987,7 +987,7 @@ YYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYY -->
 
          </div><div class="title">
          <h4>&emsp;Research stay with <a href="https://www6.cityu.edu.hk/ma/people/profile/cuckerf.htm">Felipe Cucker</a> in Hong Kong</h4></div>
-           <div class="property">Objective:</div><div class="value">Working with one of the PhD supervisors</div>
+           <div class="property">Objective:</div><div class="value">Working with one of the doctoral supervisors</div>
            <div class="property">Institution:</div><div class="value"><a href="http://www.cityu.edu.hk/">City University of Hong Kong</a></div>
            <div class="property">Location:</div><div class="value">Hong Kong, China</div>
            <div class="property">Date:</div><div class="value">15th of March to 1st of April of 2019</div>
@@ -998,7 +998,7 @@ YYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYY -->
          <h4>2018</h4>
          </div><div class="title">
          <h4>&emsp;Research visit to <a href="http://people.bath.ac.uk/masnnv/">Nicolai Vorobjov</a> in England</h4></div>
-           <div class="property">Objective:</div><div class="value">Discussion of a theorem of Gabrielov and Vorobjov related to the PhD work</div>
+           <div class="property">Objective:</div><div class="value">Discussion of a theorem of Gabrielov and Vorobjov related to the doctoral work</div>
            <div class="property">Institution:</div><div class="value"><a href="https://www.bath.ac.uk/">University of Bath</a></div>
            <div class="property">Location:</div><div class="value">Bath, England</div>
            <div class="property">Date:</div><div class="value">27th of October to 3rd of November of 2018</div>
@@ -1009,7 +1009,7 @@ YYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYY -->
 
          </div><div class="title">
          <h4>&emsp;Research stay with <a href="https://www6.cityu.edu.hk/ma/people/profile/cuckerf.htm">Felipe Cucker</a> in France</h4></div>
-           <div class="property">Objective:</div><div class="value">Working with one of the PhD supervisors</div>
+           <div class="property">Objective:</div><div class="value">Working with one of the doctoral supervisors</div>
            <div class="property">Location:</div><div class="value">Tuileries d'Affiac, France</div>
            <div class="property">Date:</div><div class="value">1st to 15th of October of 2018</div>
          </div>
@@ -1019,7 +1019,7 @@ YYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYY -->
 
          </div><div class="title">
          <h4>&emsp;Research stay with <a href="https://www6.cityu.edu.hk/ma/people/profile/cuckerf.htm">Felipe Cucker</a> in Hong Kong</h4></div>
-           <div class="property">Objective:</div><div class="value">Working with one of the PhD supervisors</div>
+           <div class="property">Objective:</div><div class="value">Working with one of the doctoral supervisors</div>
            <div class="property">Institution:</div><div class="value"><a href="http://www.cityu.edu.hk/">City University of Hong Kong</a></div>
            <div class="property">Location:</div><div class="value">Hong Kong, China</div>
            <div class="property">Date:</div><div class="value">10th to 28th of April of 2018</div>
@@ -1030,7 +1030,7 @@ YYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYY -->
          <h4>2017</h4>
          </div><div class="title">
          <h4>&emsp;Research stay with <a href="https://www6.cityu.edu.hk/ma/people/profile/cuckerf.htm">Felipe Cucker</a> in Hong Kong</h4></div>
-           <div class="property">Objective:</div><div class="value">Working with one of the PhD supervisors</div>
+           <div class="property">Objective:</div><div class="value">Working with one of the doctoral supervisors</div>
            <div class="property">Institution:</div><div class="value"><a href="http://www.cityu.edu.hk/">City University of Hong Kong</a></div>
            <div class="property">Location:</div><div class="value">Hong Kong, China</div>
            <div class="property">Date:</div><div class="value">21st of November to 8th of December of 2017</div>
@@ -1041,7 +1041,7 @@ YYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYY -->
 
          </div><div class="title">
          <h4>&emsp;Research stay with <a href="https://www6.cityu.edu.hk/ma/people/profile/cuckerf.htm">Felipe Cucker</a> in Hong Kong</h4></div>
-           <div class="property">Objective:</div><div class="value">Working with one of the PhD supervisors</div>
+           <div class="property">Objective:</div><div class="value">Working with one of the doctoral supervisors</div>
            <div class="property">Institution:</div><div class="value"><a href="http://www.cityu.edu.hk/">City University of Hong Kong</a></div>
            <div class="property">Location:</div><div class="value">Hong Kong, China</div>
            <div class="property">Date:</div><div class="value">13th to 26th of January of 2017</div>
