--- a/phdthesis_es.html
+++ b/phdthesis_es.html
@@ -1,210 +1,10 @@
-<!DOCTYPE html>
-<!-- Microdata markup added by Google Structured Data Markup Helper. -->
-<html lang="en"><head>
-    <meta charset="utf-8"/>
-    <link rel="icon" href="./imgs/logo.png"/>
-    <meta name="google" content="notranslate" />
-    <meta http-equiv="Content-Language" content="es"/>
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title>Tesis y defensa doctorales de Josu&eacute; Tonelli Cueto</title>
-    <meta name="description" content="Información sobre la tesis y defensa doctorales de Josué Tonelli Cueto" />
-    <!--  Bootstrap core CSS  -->
+<html>
+  <head>
+    <meta http-equiv="Refresh" content="0; url=doctoralthesis_es.html" />
     <link href="css/bootstrap.min.css" rel="stylesheet"/>
-
-    <!--  Custom styles for this template  -->
     <link href="css/style.css" rel="stylesheet"/>
-    <link rel="stylesheet" href="https://cdn.rawgit.com/jpswalsh/academicons/master/css/academicons.min.css">
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
-</head>
-
-  <body data-spy="scroll" data-target="#navbarCV" data-offset="105">
-<div class="fixed-top" data-toggle="affix">
-   <nav class="navbar navbar-toggleable-md navbar-inverse navbar-custom" id="general">
-      <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarsExampleDefault" aria-controls="navbarsExampleDefault" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <a class="navbar-brand" href="index.html"><img src="imgs/logo.png"/></a>
-
-      <div class="collapse navbar-collapse " id="navbarsExampleDefault">
-        <ul class="navbar-nav mr-auto">
-          <li class="nav-item">
-            <a class="nav-link" href="index_es.html">Inicio</a>
-          </li>
-
-	  <li class="nav-item">
-            <a class="nav-link" href="research_es.html">Investigaci&oacute;n</a>
-          </li>
-
-	  <li class="nav-item">
-            <a class="nav-link" href="non-research_es.html">No Investigaci&oacute;n</a>
-          </li>
-
-
-          <li class="nav-item">
-            <a class="nav-link" href="cv_es.html">CV</a>
-          </li>
-
-	  <li class="nav-item">
-            <a class="nav-link" href="multimedia_es.html">Multimedia</a>
-          </li>
-
-	<li class="nav-item">
-            <a class="nav-link" href="contact_es.html">Contacto</a>
-          </li>
-
-        </ul>
-
-        <ul class="navbar-nav r-auto">
-	<li class="nav-item">
-            <a class="nav-link" href="phdthesis.html">en</a>
-          </li>
-	<li class="nav-item active">
-            <a class="nav-link" href="phdthesis_es.html">es</a>
-          </li>
-        </ul>
-      </div>
-
-    </nav>
-
-</div>
-
-
-    <!--  Main jumbotron for a primary marketing message or call to action  -->
-<div class="jumbotron">
-    <div class="container">
-        <center>
-        <h2 class="display-4">Tesis y defensa doctorales</h2>
-        </center>
-    </div>
-</div>
-
-
-<div class="container" style="text-align:justify;">
-  <hr><p style="text-align:center;font-variant: small-caps;">La defensa tendrá lugar el 28 de noviembre de 2019. Más detalles debajo.</p><hr>
-  <center>
-  <h1 style="text-align:center;">
-    Condition and Homology in Semialgebraic Geometry
-  </h1>
-  <h1 style="text-align:center;">
-    <em>(Condición y Homología en Geometría Semialgebraica)</em>
-  </h1>
-  </center>
-  <hr>
-  <div class="row" align="center">
-  <div class="col" align="center">
-  <a class="btn btn-phd" href="thesis/thesis_tonellicueto.pdf" role="button" style="width:100%;">Tesis (PDF) [versión entregada]</a></div><div class="col" align="center">
-  <a class="btn btn-phd" href="thesis/coverthesis_tonellicueto.jpg" role="button" style="width:100%;">Cubierta de la tesis (JPG)</a>
-  </div></div>
-  <hr>
-  <div class="row" align="center">
-    <div class="col" align="center">
-       <a href="thesis/thesis_tonellicueto.pdf"><img id="cover" src="thesis/coverpage.jpg" style="margin-bottom:0.5em;margin-top:1em;" alt="Portada de Conditionand Homology in Semialgebraic Geometry por Josué Tonelli Cueto" width="73%"/></a>
-    </div>
-    <div class="col" align="center">
-      <a href="https://www.instagram.com/p/B3fBRcdgdQw/"><img id="portrait" src="imgs/josue_tonelli_cueto_thesis.JPG" style="margin-bottom:0.5em;margin-top:1em;" alt="Josué Tonelli Cueto sosteniendo una copia de su tesis doctoral" width="100%"/></a>
-    </div>
-  </div>
-  <hr>
-  <h3>
-  Resumen
-  </h3>
-  <p>
-  El cálculo de los grupos de homología de conjuntos semialgebraicos (dados por fórmulas booleanas) es todavía uno de los mayores desafíos de la geometría semialgebraica computacional. Aunque se busca un algoritmo que tome a lo sumo tiempo simplemente exponencial en el número de variables, hasta el día de hoy todos los algoritmos existentes son simbólicos y doblemente exponenciales. En esta tesis doctoral, mostramos cómo se puede obtener un algoritmo numérico que tome tiempo simplemente exponencial con alta probabilidad, lo cual es una mejora del estado del arte. Para ello, explicamos las ideas, métodos y técnicas subyacentes procedentes de la geometría algebraica numérica, de la complejidad numérica y del análisis topológico de datos que han hecho posible este progreso. Terminamos con una lista de problemas y preguntas abiertas que indican un posible futuro de la computación numérica de invariantes topológicos.
-  </p>
-  <p>
-  Además, en los apéndices, estudiamos el número esperado de ceros reales de un sistema oligonómico aleatorio y damos una visión informal del tema principal de esta tesis en castellano.
-  </p>
-  <h3>
-  Laburpena (Resumen en euskera)
-  </h3>
-  <p>
-  Multzo semialjebraikoen (formula boolearrek emandakoen) homologia-taldeak kalkulatzeak jarraitzen du, oraindik ere, geometria semialjebraiko konputazionalaren erronka handienetako bat izaten. Bilatzen den algoritmoak aldagai kopuruan baino ez du hartzen denbora behin esponentziala; hala ere, gaur egun dauden algoritmo guztiak sinbolikoak eta bi aldiz esponentzialak dira. Doktorego-tesi honetan erakusten dugu nola lor daitekeen debora behin esponentzialean eta probabilitate handiarekin exekutatzen den zenbakizko algoritmo bat; hori teknikaren egoeraren hobekuntza da. Horretarako, zenbakizko geometria aljebraikoaren, zenbakizko konplexutasunaren eta datu-analisi topologikoaren azpian dauden eta aurrerapen hori posible egin duten ideia, metodo eta teknikak azaltzen ditugu. Problemen eta galdera irekien zerrenda batekin bukatzen dugu, zeinek inbariante topologikoen zenbakizko konputazioaren etorkizun posible bat adierazten baitute.
-  </p>
-  <p>
-  Gainera, eranskinetan, ausazko sistema oligonomiko baten zero kopurua aztertzen dugu, eta tesi honen ikuspegi informala ematen dugu gaztelaniaz.
-  </p>
-  <h3>
-  Abstract (Resumen en inglés)
-  </h3>
-  <p>
-  The computation of the homology groups of semialgebraic sets (given by Boolean formulas) remains one of the open challenges of computational semialgebraic geometry. Despite the search for an algorithm taking singly exponential time only on the number of variables, as of today, the existing algorithms are symbolic and doubly exponential. In this PhD thesis, we show how to obtain a numerical algorithm running in single exponential time with very high probability, which improves the state-of-the-art. To do so, we explain the underlying ideas, methods and techniques from numerical algebraic geometry, numerical complexity and topological data analysis that made this progress possible. We finish with a list of open problems and questions pointing to a possible future of the numerical computation of topological invariants.
-  </p>
-  <p>
-  Additionally, in the appendices, we cover the topic of the expected number of real zeros of a random fewnomial system and we give an accessible account of the central theme in Spanish.
-  </p>
-  <h3>
-  Zusammenfassung (Resumen en alemán)
-  </h3>
-  <p>
-  Die Berechnung der Homologiegruppen von semialgebraichen Mengen (gegeben durch boolesche Formeln) bleibt eine der offenen Herausforderungen der algorithmischen semialgebraischen Geometrie. Trotz der Suche nach einem Algorithmus mit einfach exponentieller Laufzeit in der Anzahl der Variablen, sind die nach heutigem Stand bekannten Algorithmen symbolisch und doppelt exponentiell. In dieser Doktorarbeit zeigen wir, wie man einen numerischen Algorithmus konstruiert, der mit großer Wahrscheinlichkeit einfach exponentiell ist und somit den Stand der Forschung verbessert. Dazu erklären wir die zugrundliegenden Ideen, Methoden und Techniken von numerischer algebraischen Geometrie, numerischer Komplexität und topologischer Datenanalyse, die dieser Fortschrift möglich machten. Wir enden mit einer Liste offener Probleme und Fragen, die auf eine mögliche Zukunft von Berechnung der topologischen Invarianten weisen.
-  </p>
-  <p>
-  Außerdem, behandeln wir im Anhange die erwartete Anzahl reeller Nullstellen eines zufälligen Systems polynomialer Gleichungen mit wenigen Termen und geben einen informellen Überblick über das Hauptthema auf Spanisch.
-  </p>
-  <hr>
-  <h2>
-  Tesis doctoral
-  </h2>
-  <p>
-  La tesis doctoral fue entregada el 11 de octubre de 2019. Esta está actualmente bajo examiación por los evaluadures Peter Bürgisser, Felipe Cucker y Pierre Lairez.
-  </p>
-  <hr>
-  <h2>
-  Defensa doctoral
-  </h2>
-  <p>
-  La defensa doctoral está planeada para el 28 de noviembre de 2019 a las 12:00. La defensa tendrá lugar en el aula MA313/314 en la 3ª planta del Institut für Mathematik de la Technische Universität Berlin (Str. des 17. Juni 136). El comité de la defensa doctoral será presidido por John M. Sullivan y estará compuesto por los evaluadores Peter Bürgisser, Felipe Cucker and Pierre Lairez. Después de la defensa, habrá una pequeña celebración con comida y bebidas en el Matheon Lounge (MA315).
-  </p>
-  <hr>
-</div>
-
-<footer>
-<hr>
-    <p style="text-align:left;">&emsp;&emsp;&copy;Josu&eacute; Tonelli-Cueto
-        <span id="finalsentence" style="float:right;"> C&oacute;digo de la p&aacute;gina creado por el arte de copiar, pegar y cruzar los dedos&emsp;&emsp;</span></p>
-<hr style="margin: 0;">
-</footer> <!--  /container  -->
-
-    <!-- Bootstrap core JavaScript
-    ================================================== -->
-    <!-- Placed at the end of the document so the pages load faster -->
-    <script src="https://code.jquery.com/jquery-3.1.1.slim.min.js" integrity="sha384-A7FZj7v+d/sdmMqp/nOQwliLvUsJfDHW+k9Omg/a/EheAdgtzNs3hpfag6Ed950n" crossorigin="anonymous"></script>
-    <script>window.jQuery || document.write('<script src="../../assets/js/vendor/jquery.min.js"><\/script>')</script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.4.0/js/tether.min.js" integrity="sha384-DztdAPBWPRXSA/3eYEEUWrWCy7G5KFbe8fFjk5JAIxUYHKkDx6Qin1DkWx51bBrb" crossorigin="anonymous"></script>
-    <script src="js/bootstrap.min.js"></script>
-    <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
-    <script src="js/ie10-viewport-bug-workaround.js"></script>
-    <!-- For phone -->
-    <script type="text/javascript">
-    <!--
-    if (screen.width <= 699) {
-      var x;
-      x = document.getElementsByTagName("H1");
-      var i;
-        for (i = 0; i < x.length; i++) {
-         x[i].style="font-size:2.5em;font-weight:bold;";
-        }
-      x = document.getElementsByTagName("H2");
-        for (i = 0; i < x.length; i++) {
-         x[i].style="font-size:1.8em;font-weight:bold;";
-      }
-      x = document.getElementsByTagName("H3");
-        for (i = 0; i < x.length; i++) {
-         x[i].style="font-size:1em;font-weight:bold;";
-      }
-    document.getElementById("finalsentence").innerHTML="";
-    }
-    //-->
-    </script>
-    <!-- For math expression-->
-    <script type="text/x-mathjax-config">
-      MathJax.Hub.Config({
-       tex2jax: {
-         inlineMath: [ ['$','$'], ["\\(","\\)"] ],
-        processEscapes: true
-        }
-       });
-    </script>
-     <script type="text/javascript" src='https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.5/MathJax.js?config=TeX-MML-AM_CHTML' async></script>
+  </head>
+  <body>
+    <p style="text-align:center;font-variant: small-caps;">Esta página ha cambiado su nombre. <a href="doctoralthesis_es.html">Por favor, sigue este enlace.</a></p>
   </body>
 </html>
